--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,9 @@ services:
     container_name: api
     ports:
       - 5000:80
-      - 5001:443
     build:
-      context: ./SombraSoft.MovieRental.API
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./SombraSoft.MovieRental.API/Dockerfile
     links:
       - mongo
     networks:
